# quark

./: .gitignore  CMakeLists.txt  README.md  demo.sh  lint.sh
cmake/: eigen.cmake  rapidjson.cmake  simdjson.cmake  tools.cmake
include/quark/: AlphaReader.h  Config.h  CsvReader.h  DifferentialEvo.h  QuarkExplorer.h  QuarkOutput.h  QuarkStrategy.h  StringUtils.h
quark/: CMakeLists.txt
quark/source/: main.cpp
source/: AlphaReader.cpp  Config.cpp  CsvReader.cpp  QuarkExplorer.cpp  QuarkOutput.cpp  QuarkStrategy.cpp  StringUtils.cpp  greeter.cpp
